src/App.css
:root {
    --bs-body-font-family: "Montserrat", sans-serif !important;
    --bs-border-radius: 1rem !important;
}

.card {
    --bs-card-bg: var(--bs-dark-bg-subtle) !important;
    --bs-card-border-width: 0px !important;
}

.banner {
    background: linear-gradient(to left, #7474bf, #348ac7);
    text-shadow: 1px 1px 4px rgba(34,34,34,0.5);
}

.banner * {
    color: #fff !important;
}

.preview-content {
    display: block;
    aspect-ratio: 16 / 10;
}

